2004-06-26  Mark D. Baushke  <mdb@cvshome.org>

	* import.c (import_usage): Add new -X flag.
	(import): Handle new -X flag.
	(process_import_file): Handle new -X flag.
	(killnew): New static flag variable to indicate use of -X flag.
	(preserve_initial_permissions): New function, extracted from
	add_rcs_file().
	(expand_and_copy_contents): Likewise.
	(add_rcs_file): New argument, do_killnew, to cause "import -X" flag
	processing.  Implement -X flag, and use newly abstracted functions.
	* rcs.h (add_rcs_file): Update prototype for do_killnew argument.
	* commit.c (checkaddfile): Update for add_rcs_file function change.
	* mkmodules.c (init): Likewise.
	* client.c (handle_mt): Handle an importmergecmd tag without
	any conflicts (for 'import -X' support).
	* sanity.sh (importX): New test.
	(New feature from Chris Demetriou <cgd@broadcom.com>.)
	
2004-06-22  Derek Price  <derek@ximbiot.com>

	* wrapper.c: Add explicit "void" return type to "wrap_clean_fmt_str"
	definition.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-06-09  Derek Price  <derek@ximbiot.com>

	* server.c (entries, serve_is_modified): Reorder to remove prototypes.
	(supported_response): Remove prototype.

2004-06-09  Derek Price  <derek@ximbiot.com>

	* commit.c, filesubr.c, history.c, server.c, wrapper.c: Various
	security fixes.
	(Original patch from Stefan Essler <s.esser@e-matters.de> & Sebastian
	Krahmer <krahmer@suse.de>.)

	* cvs.h: Include xsize.h.

2004-06-09  Derek Price  <derek@ximbiot.com>

	* server.c (serve_entry, serve_is_modified, serve_unchanged): Protect
	against malformed entries.
	* sanity.sh (server): Tests for same.

2004-06-07  Larry Jones  <lawrence.jones@ugsplm.com>

	* sanity.sh (basica): More tests for string-based revision inc.

2004-06-04  Larry Jones  <lawrence.jones@ugsplm.com>

	* subr.c (increment_revnum): Rewrite ala RCS to work directly on
	the string rather than converting to int to avoid overflow.